# Stm32workingcmakefile

./: .mxproject  CMakeLists.txt  STM32F100XX_FLASH.ld  working.ioc
Core/Src/: main.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
